--- a/Website-for-NGO--Software-Engineering-Project-master/contact.html
+++ b/Website-for-NGO--Software-Engineering-Project-master/contact.html
@@ -13,7 +13,7 @@ background-size: cover;
 <body>
 <h1><pre>           
 
-                                               sheetalprajapat01@gmail.com</pre></h1>
+                                               lakhichand2000@gmail.com</pre></h1>
 <h1><pre>        
 
 
@@ -26,7 +26,7 @@ background-size: cover;
                                               
 
 
-                                                7427095396</pre></h1>
+                                                9075538847</pre></h1>
 
 </body>
 </html>
