--- a/Website-for-NGO--Software-Engineering-Project-master/index.html
+++ b/Website-for-NGO--Software-Engineering-Project-master/index.html
@@ -30,6 +30,9 @@
     </div>    
             
     </div>
+        <footer>
+        <p align = "center">@2022copyright-lakhichand</p>
+        </footer>
     
     </header>
 
